Fix possible crash in glyph cache when deleting and creating contexts

The freeResource(), used in the glyph cache as a notifier of when the
owner context of the cache disappears, is never called if the context
is in a group with other contexts that share its resources. This
implements a second notifier function instead which can be used to
invalidate the glyph cache when its context is destroyed.

Task-number: QTBUG-22324
Reviewed-by: Samuel